feat(ppt): add presentation slides

--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@
 
 #-------------------------------
 
-techtalk-graphql-slides.pdf
-techtalk-graphql-slides.pptx
+#techtalk-graphql-slides.pdf
+#techtalk-graphql-slides.pptx
 
 #-------------------------------
